--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3",
-    "massive": "^2.1.0"
+    "massive": "^2.1.0",
+    "mongodb": "^2.1.2"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
