--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "breynisson",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.14.2",
+    "cookie-parser": "^1.4.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "massive": "^2.1.0",
-    "mongodb": "^2.1.2"
+    "mongodb": "^2.1.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
