--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/test.js"
   },
   "author": "breynisson",
   "license": "MIT",
@@ -17,9 +17,11 @@
     "express-session": "^1.12.1",
     "http": "0.0.0",
     "massive": "^2.1.0",
+    "mocha": "^2.4.5",
     "mongodb": "^2.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "supertest": "^1.2.0",
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
