--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
+    "bower": "^1.7.9",
     "gulp": "^3.9.0",
     "gulp-inject": "^3.0.0",
     "gulp-jscs": "^3.0.2",
